<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
  <TextView 
  			android:id="@+id/header_text" 
  			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/about_header"
			android:autoLink="email"
			>
  </TextView>
  <TextView 
  			android:id="@+id/version_text" 
  			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/about_string"
			>
  </TextView>
  
   <TextView 
  			android:id="@+id/footer_text" 
  			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/about_footer"
			>
  </TextView>
  	
</LinearLayout>
